.archive/nextcloud/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nc.kentaro1043.com`)
      middlewares:
        - name: nextcloud
          namespace: nextcloud
      services:
        - name: nextcloud
          port: 8080

  tls:
    secretName: nextcloud-tls
